crates/test-files/fixtures/compile_errors/call_generic_function_with_unsatisfied_bound.fe
trait Dummy {}

struct Bar {}

struct Foo {

  pub fn bar<T: Dummy>(self, _ x: T) -> bool {
    return true
  }
}

contract Meh {

  pub fn call_bar(self) {
    let foo: Foo = Foo();
    foo.bar(Bar())
  }
}
